rubocop/examples/good/style_Not.rb
# Don't use block comments. They cannot be preceded by whitespace and
#   are not as easy to spot as regular comments. [link]

# good
# comment line
# another comment line
