rubocop/examples/bad/style_Not.rb
# Don't use block comments. They cannot be preceded by whitespace and
#   are not as easy to spot as regular comments. [link]

# bad
=begin
comment line
another comment line
=end
